<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llContextCell"
    android:orientation="vertical"
    style="@style/contextmenu_primary_inner">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.qfs.pagan.RelativeOptionSelector
            android:orientation="vertical"
            android:id="@+id/rosRelativeOption"
            android:paddingEnd="@dimen/number_selector_spacing"
            android:paddingBottom="@dimen/number_selector_spacing"
            android:minWidth="@dimen/relative_option_width"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/clTextViews"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnSplit"
                    android:contentDescription="@string/cd_split"
                    style="@style/contextmenu_button"
                    app:icon="@drawable/icon_split"/>

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btnInsert"
                    android:contentDescription="@string/cd_insert"
                    style="@style/contextmenu_button"
                    app:icon="@drawable/icon_insert" />

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btnRemove"
                    android:contentDescription="@string/cd_remove"
                    style="@style/contextmenu_button"
                    app:icon="@drawable/icon_remove" />

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btnDuration"
                    android:lines="1"
                    android:maxWidth="@dimen/icon_button_width"
                    android:padding="0dp"
                    style="@style/contextmenu_button"
                    android:text="" />

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btnUnset"
                    android:contentDescription="@string/cd_unset"
                    style="@style/contextmenu_button"
                    app:icon="@drawable/icon_unset" />

                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <com.qfs.pagan.NumberSelector
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/number_selector_spacing"
                android:paddingTop="@dimen/number_selector_spacing"
                android:id="@+id/nsOctave"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:entries_per_line="8"
                custom:button_theme="1"
                custom:min="0"
                custom:max="7"/>
        </LinearLayout>

    </LinearLayout>


    <com.qfs.pagan.NumberSelector
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nsOffset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:min="0"
        custom:max="11"/>

</LinearLayout>