...
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnFrontNew"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/button"
            android:text="New Project"/>

        <TextView
            android:id="@+id/btnFrontLoad"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
...
