<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.qfs.pagan.numberinput.RangedIntegerInput
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/etNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:min="0"
            custom:max="128"
            android:ems="3"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>
